call field for adresse for realstate on adinput. keep calling it for henteadressen for all other categories.

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -91,7 +91,11 @@
         <% end %>
 
         <div class="u-push-down-only">
-            <label>Henteadresse:</label>
+            <% if @ad.realestate? %>
+                <label>Adresse:</label>
+            <% else %>
+                <label>Henteadresse:</label>
+            <% end %>
 
             <%- if @ad.user.locations.length > 0 -%>
 
