--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -9,11 +9,8 @@
                         { text: 'Aktiviteter',   icon: 'comments',        path: bookings_path },
                         { text: 'Favoritter',    icon: 'heart',           path: users_favorite_ads_path },
                         { text: 'Leiehistorikk', icon: 'history',         path: rental_history_users_path },
+                        { text: 'Betaling',      icon: 'credit-card',     path: payment_users_path },
                     ]
-
-                    unless Plendit::Application.config.x.application_mode.beta
-                        links << { text: 'Betaling',   icon: 'credit-card',       path: payment_users_path }
-                    end
 
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
                 %>
