--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <%= render partial: 'privacy_box' unless Plendit::Application.config.x.application_mode.beta %>
+        <%= render partial: 'privacy_box' %>
 
         <div class="row u-push-down">
             <div class="three columns">
