Change seaworthy to a statement accepted by If

--- a/app/views/users/verify_boat_license.html.erb
+++ b/app/views/users/verify_boat_license.html.erb
@@ -41,7 +41,7 @@
                 <% end %>
 
                 <%= form_for '', html: { multipart: true } do |f| %>
-                    <%= f.label :seaworthy, 'Egenerklæring' %>
+                    <%= f.label :seaworthy, 'Jeg bekrefter at jeg har tilstrekkelig kompetanse til å føre en båt inntil 24 fot og 150 hestekrefter. ' %>
                     <%= f.check_box :seaworthy %>
 
                     <br>
