--- a/app/views/users/verify_id_card.html.erb
+++ b/app/views/users/verify_id_card.html.erb
@@ -7,7 +7,7 @@
 
             <% if current_user.id_card_status == :missing %>
                 <p>
-                    For å kunne overføre summer over 20 000 kroner, må vi
+                    For å kunne leie noe på Plendit, må vi
                     ha et gyldig identitetsbevis fra deg.
                 </p>
 
