--- a/app/views/users/_privacy_box.html.erb
+++ b/app/views/users/_privacy_box.html.erb
@@ -1,4 +1,3 @@
 <div class="help-box u-push-down">
-    Under <%= link_to 'personvern ', Rails.configuration.x.customerservice.privacy_info %> kan du lese mer om krav til dokumentasjon og hvordan Plendit behandler
-    personlige dokumenter.
+    Vi sletter bilder du laster opp her etter kontroll, og de vil aldri være synelig for andre brukere. Du kan lese mer om hvordan Plendit behandler dokumentasjon under <%= link_to 'personvern ', Rails.configuration.x.customerservice.privacy_info %> 
 </div>
