--- a/app/views/users/_show_user_payment_account.html.erb
+++ b/app/views/users/_show_user_payment_account.html.erb
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="eight columns">
-          <%= @user.user_payment_account.bank_account_number %>
+          <%= @user.user_payment_account.pretty_bank_account_number %>
         </div>
     </div>
     <div class="row">
