clean up and load correct data from controller, now using the correct scope.

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -1,12 +1,14 @@
-<%= render layout: 'gray_box', locals: { title: 'Penger du har tjent på utleie' } do %>
-    <table>
-        <thead>
-            <td>Booking</td>
-            <td>Betalt av</td>
-            <td>Sum</td>
-        </thead>
-        <tbody>
-            <%= render FinancialTransaction.from_user( current_user.id ).includes(:financial_transactionable)  %>
-        </tbody>
-    </table>
+<%= render layout: 'gray_box', locals: { title: 'Penger du har tjent på utleie i det siste året' } do %>
+    <% if @financial_transactions.present? %>
+        <table>
+            <thead>
+                <td>Booking</td>
+                <td>Betalt av</td>
+                <td>Sum</td>
+            </thead>
+            <tbody>
+                <%= render @financial_transactions %>
+            </tbody>
+        </table>
+    <% end %>
 <% end %>
