languange cleanup (with help from Trygve)

--- a/app/views/ads/_ad_status_box.html.erb
+++ b/app/views/ads/_ad_status_box.html.erb
@@ -10,13 +10,13 @@
     <% if ad.published? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get,
-                data: { confirm: 'Hvis du redigerer annonsen, vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
+                data: { confirm: 'Hvis du redigerer annonsen den vil bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
         <%= button_to 'Gjør usynlig', pause_ad_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get,
                 data: { confirm: 'Hvis du gjør annonsen usynlig, blir den ikke lenger søkbar. Folk du deler den med, kan fortsatt se og leie den. Er du sikker på at du vil gjøre annonsen din usynlig?' } %>
         <%= button_to 'Stopp annonsen', stop_ad_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get,
-                data: { confirm: 'Hvis du stopper annonsen, kan bare du se den. Er du sikker på at du vil stoppe annonsen din?'} %>
+                data: { confirm: 'Hvis du stopper annonsen kan bare du se den. Er du sikker på at du vil stoppe annonsen din?'} %>
     <% elsif ad.draft? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get %>
@@ -26,19 +26,21 @@
     <% elsif ad.paused? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get,
-                data: { confirm: 'Hvis du redigerer annonsen, vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
+                data: { confirm: 'Hvis du redigerer annonsen vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
         <%= button_to 'Aktiver annonsen', resume_ad_path(ad),
                 form_class: 'u-inline',
                 class: btncls %>
         <%= button_to 'Stopp annonsen', stop_ad_path(ad),
-                form_class: 'u-inline', class: btncls, method: :get,  data: { confirm: 'Hvis du stopper annonsen, kan bare du se den. Er du sikker på at du vil stoppe annonsen din?'} %>
+                form_class: 'u-inline', class: btncls, method: :get,
+                data: { confirm: 'Hvis du stopper annonsen kan bare du se den. Er du sikker på at du vil stoppe annonsen din?'} %>
     <% elsif ad.draft? %>
     <% elsif ad.refused? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get %>
     <% elsif ad.stopped? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),
-                form_class: 'u-inline', class: btncls, method: :get, data: { confirm: 'Hvis du redigerer annonsen, vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
+                form_class: 'u-inline', class: btncls, method: :get,
+                data: { confirm: 'Hvis du redigerer annonsen den vil bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
         <%= button_to 'Aktiver annonsen', resume_ad_path(ad), form_class: 'u-inline', class: btncls %>
     <% elsif ad.waiting_review? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),
