accident_report: added file uploading, with support for multiple files being uploaded at a time

--- a/app/views/accident_reports/create.html.erb
+++ b/app/views/accident_reports/create.html.erb
@@ -3,6 +3,8 @@
         <div class="u-push-down">
             <p>Skademeldingen er registrert, og dere blir kontaktet snart.</p>
 
+            <!-- TRANSLATEME: <%= @accident_report.accident_report_attachments.size %> filer ble lastet opp. -->
+
             <p><%= link_to "Tilbake til bookingen", @booking %></p>
         </div>
     </div>
