--- a/app/views/accident_reports/_form.html.erb
+++ b/app/views/accident_reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @accident_report, url: { action: 'create' } do |f| %>
+<%= form_for @accident_report, url: { action: 'create' }, html: { multipart: true } do |f| %>
     <% if @accident_report.errors.any? %>
         <div id="error_explanation">
             <h2><%= pluralize(@accident_report.errors.count, 'error') %> prohibited this accident_report from being saved:</h2>
@@ -40,6 +40,9 @@
         <%= f.label :body, 'Hva skjedd?' %><br>
         <%= f.text_area :body, class: 'u-full-width' %>
     </div>
+
+    <%= f.file_field :attachments, multiple: true %>
+
 <!--
   <div class="u-pull-right button">
 -->
