add html restrictions for about-me page so the user doesnt have to get feedback on too long a message after submit.

--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -157,7 +157,7 @@
         <div class="row">
             <div class="two-thirds column">
                 <%= f.label :about, 'Om meg:' %>
-                <%= f.text_area :about, class: 'u-full-width' %>
+                <%= f.text_area :about, maxlength: 2000, class: 'u-full-width' %>
             </div>
         </div>
 
