--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -130,7 +130,6 @@
             </div>
         </div>
 
-        <%= render partial: 'privacy_box' %>
 
         <div class="row u-push-down">
             <div class="three columns">
@@ -142,6 +141,9 @@
                   <%#= uimg_builder.hidden_field :id %>
                   <%= uimg_builder.hidden_field :category, :value => 'avatar' %>
                   <%= uimg_builder.label :image, 'Last opp profilbilde' %>
+            <small>
+                Kvadratiske bilder ser best ut
+            </small>
                   <%= uimg_builder.file_field :image %>
                 <% end %>
               </p>
